--- a/src/onegov/swissvotes/locale/en_US/LC_MESSAGES/onegov.swissvotes.po
+++ b/src/onegov/swissvotes/locale/en_US/LC_MESSAGES/onegov.swissvotes.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2024-03-25 09:18+0100\n"
+"POT-Creation-Date: 2024-03-25 13:15+0100\n"
 "PO-Revision-Date: 2021-01-07 09:11+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: \n"
@@ -95,6 +95,9 @@ msgstr "Analysis of advertisement campaign"
 
 msgid "Fög Analysis"
 msgstr "Fög Analysis"
+
+msgid "Campaign finances"
+msgstr "Campaign finances"
 
 msgid "Resolution"
 msgstr "Decree on voting result"
@@ -1929,6 +1932,15 @@ msgstr "(predominantly positive)"
 
 msgid "(predominantly negative)"
 msgstr "(predominantly negative)"
+
+msgid "Total receipts of ‘yes’ camp"
+msgstr "Total receipts of ‘yes’ camp"
+
+msgid "largest donors"
+msgstr "largest donors"
+
+msgid "Total receipts of ‘no’ camp"
+msgstr "Total receipts of ‘no’ camp"
 
 msgid "Display the list of documents"
 msgstr "Display the list of documents"
