--- a/src/onegov/swissvotes/locale/en_US/LC_MESSAGES/onegov.swissvotes.po
+++ b/src/onegov/swissvotes/locale/en_US/LC_MESSAGES/onegov.swissvotes.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2024-03-25 13:15+0100\n"
+"POT-Creation-Date: 2024-03-26 07:02+0100\n"
 "PO-Revision-Date: 2021-01-07 09:11+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: \n"
@@ -1959,6 +1959,9 @@ msgstr "Overview of voting result by the Federal Chancellery"
 
 msgid "Interactive map of the Swiss Federal Statistical Office"
 msgstr "Interactive map by the Swiss Federal Statistical Office"
+
+msgid "Popular votes dashboard by the Swiss Federal Statistical Office"
+msgstr "Popular votes dashboard by the Swiss Federal Statistical Office"
 
 msgid "Display the map"
 msgstr "Display the map"
