Add iFrame link as Button

--- a/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: OneGov Cloud 1.0\n"
-"POT-Creation-Date: 2024-02-12 09:51+0100\n"
+"POT-Creation-Date: 2024-03-27 13:47+0100\n"
 "PO-Revision-Date: 2021-03-03 14:04+0100\n"
 "Last-Translator: Lukas Burkhard <lukas.burkhard@seantis.ch>\n"
 "Language-Team: French\n"
@@ -110,8 +110,8 @@ msgid "Opening Hours"
 msgstr "Horaires d'ouverture"
 
 msgid ""
-"Please add a day and times to each opening hour entry or deactivate specific"
-" opening hours."
+"Please add a day and times to each opening hour entry or deactivate specific "
+"opening hours."
 msgstr ""
 "Veuillez ajouter un jour et des heures à chaque entrée d'heures d'ouverture "
 "ou désactiver des heures d'ouverture spécifiques."
@@ -232,6 +232,7 @@ msgstr "Télécharger le ticket"
 msgid "Cancel"
 msgstr "Annuler"
 
+#.
 #. Used in sentence: "${event} published."
 msgid "Event"
 msgstr "Événement"
@@ -324,6 +325,9 @@ msgstr "Type :"
 #. Used in sentence: "<dynamic element> <dynamic element>"
 msgid "The chat request got accepted."
 msgstr "La demande de chat a été acceptée."
+
+msgid "<dynamic element> <dynamic element>"
+msgstr ""
 
 #. Used in sentence: "<dynamic element> <dynamic element>"
 msgid "Connect to chatserver ..."
@@ -426,8 +430,7 @@ msgstr ""
 "veuillez appuyer sur Annuler, et essayer de faire les changements dans le "
 "dossier par petites incrémentations."
 
-msgid ""
-"For additional safety you can also download a backup before continuing:"
+msgid "For additional safety you can also download a backup before continuing:"
 msgstr ""
 "Pour plus de sécurité, vous pouvez également télécharger une sauvegarde "
 "avant de continuer :"
@@ -436,8 +439,8 @@ msgid "Download backup"
 msgstr "Télécharger une sauvegarde"
 
 msgid ""
-"There was an error while migrating your directory! You can fix the displayed"
-" entries in a separate window and then continue here."
+"There was an error while migrating your directory! You can fix the displayed "
+"entries in a separate window and then continue here."
 msgstr ""
 "Une erreur est survenue lors de la migration de votre dossier ! Vous pouvez "
 "résoudre les problèmes concernant les entrées affichées dans une autre "
@@ -461,18 +464,25 @@ msgstr "Confirmer"
 msgid "There was an error while importing your directory!"
 msgstr "Une erreur est survenue lors de l'importation de votre dossier !"
 
+msgid "Embed iFrame"
+msgstr "Intégrer une iFrame"
+
+msgid "You can copy the following code to embed this page as an iFrame:"
+msgstr ""
+"Vous pouvez copier le code suivant pour intégrer cette page dans une iFrame:"
+
 msgid ""
 "Please review your data and press \"Complete\" to finalize the process. If "
 "there's anything you'd like to change, click on \"Edit\" to return to the "
 "filled-out form."
 msgstr ""
-"Veuillez vérifier vos données et appuyez sur « Compléter » pour finaliser le"
-" processus. S'il y a quelque chose que vous souhaitez modifier, cliquez sur "
-"« Modifier » pour retourner sur le formulaire complété."
+"Veuillez vérifier vos données et appuyez sur « Compléter » pour finaliser le "
+"processus. S'il y a quelque chose que vous souhaitez modifier, cliquez sur « "
+"Modifier » pour retourner sur le formulaire complété."
 
 msgid ""
-"The image shown in the list view is a square. To have your image shown fully"
-" in the list view, you need to use a square image."
+"The image shown in the list view is a square. To have your image shown fully "
+"in the list view, you need to use a square image."
 msgstr ""
 "L'image affichée dans la liste est un carré. Pour que votre image s'affiche "
 "entièrement dans la liste, vous devez utiliser une image carrée."
@@ -502,13 +512,11 @@ msgid "No files uploaded yet"
 msgstr "Aucun fichier téléchargé pour le moment"
 
 msgid "You are trying to open a page for which you are not authorized."
-msgstr ""
-"Vous essayez d'ouvrir une page pour laquelle vous n'êtes pas autorisé."
+msgstr "Vous essayez d'ouvrir une page pour laquelle vous n'êtes pas autorisé."
 
 msgid "Please follow this link to login with a different user."
 msgstr ""
-"Veuillez suivre ce lien pour vous connecter en tant qu'utilisateur "
-"différent."
+"Veuillez suivre ce lien pour vous connecter en tant qu'utilisateur différent."
 
 msgid "Please follow this link to login."
 msgstr "Veuillez suivre ce lien pour vous connecter."
@@ -631,8 +639,8 @@ msgstr "Ce site n'est pas public mais il peut être vu par les membres."
 msgid ""
 "This site contains no lead. Leads are used for lists and search results."
 msgstr ""
-"Cette rubrique ne contient pas d’introduction. Il est important de saisir un"
-" texte comme introduction pour faciliter la recherche et les listes."
+"Cette rubrique ne contient pas d’introduction. Il est important de saisir un "
+"texte comme introduction pour faciliter la recherche et les listes."
 
 msgid "Map"
 msgstr "Carte"
@@ -989,12 +997,12 @@ msgstr "Branchez votre YubiKey sur un port USB et appuyez dessus."
 
 msgid ""
 "Published documents with a digital seal can be discovered through the site-"
-"search and in the list of documents with a digital seal. This action will be"
-" logged and cannot be undone."
+"search and in the list of documents with a digital seal. This action will be "
+"logged and cannot be undone."
 msgstr ""
-"Documents publiés avec un sceau digital peuvent être trouvés grâce au moteur"
-" de recherche sur le site et dans liste des documents avec un sceau digital."
-" Cette action sera enregistrée et ne pourra pas être annulée."
+"Documents publiés avec un sceau digital peuvent être trouvés grâce au moteur "
+"de recherche sur le site et dans liste des documents avec un sceau digital. "
+"Cette action sera enregistrée et ne pourra pas être annulée."
 
 msgid "Without digital seal"
 msgstr "Sans sceau digital"
@@ -1077,8 +1085,8 @@ msgid "Confirm subscription"
 msgstr "Confirmer l'abonnement"
 
 msgid ""
-"If you did not subscribe to this newsletter you can simply ignore this "
-"e-mail."
+"If you did not subscribe to this newsletter you can simply ignore this e-"
+"mail."
 msgstr ""
 "Si vous ne vous êtes pas abonné à cette lettre d'informations, vous pouvez "
 "tout simplement ignorer cet e-mail."
@@ -1102,13 +1110,13 @@ msgid "No reservations today."
 msgstr "Aucune réservation aujourd'hui."
 
 msgid ""
-"This is the daily reservation overview for ${organisation}. If you no longer"
-" want to receive this e-mail please contact an administrator so they can "
+"This is the daily reservation overview for ${organisation}. If you no longer "
+"want to receive this e-mail please contact an administrator so they can "
 "remove you from the recipients list."
 msgstr ""
 "Voici l'aperçu quotidien sur les réservations pour ${organisation}. Si vous "
-"ne souhaitez plus recevoir ce courriel, veuillez contacter un administrateur"
-" pour qu'il vous enlève de la liste des destinataires."
+"ne souhaitez plus recevoir ce courriel, veuillez contacter un administrateur "
+"pour qu'il vous enlève de la liste des destinataires."
 
 msgid "This is what happend on the ${org} website yesterday:"
 msgstr "Voici ce qui s'est passé aujourd'hui sur le site web de ${org}:"
@@ -1154,8 +1162,7 @@ msgid ""
 "this e-mail you may deactivate it by clicking on"
 msgstr ""
 "Ceci est le courriel quotidien de situation de OneGov Cloud. Si vous ne "
-"souhaitez pas recevoir ce courriel, vous pouvez le désactiver en cliquant "
-"sur"
+"souhaitez pas recevoir ce courriel, vous pouvez le désactiver en cliquant sur"
 
 msgid "unsubscribe"
 msgstr "se désabonner"
@@ -1188,15 +1195,14 @@ msgid "${author} wrote"
 msgstr "${author} a écrit"
 
 msgid ""
-"This is the notification for notes on reservations for "
-"${request.app.org.title}. If you no longer want to receive this e-mail "
-"please contact an administrator so they can remove you from the recipients "
-"list."
+"This is the notification for notes on reservations for ${request.app.org."
+"title}. If you no longer want to receive this e-mail please contact an "
+"administrator so they can remove you from the recipients list."
 msgstr ""
-"Il s'agit de la notification de notes sur les réservations pour "
-"${request.app.org.title}. Si vous ne souhaitez plus recevoir cet e-mail, "
-"veuillez contacter un administrateur afin qu'il puisse vous retirer de la "
-"liste des destinataires."
+"Il s'agit de la notification de notes sur les réservations pour ${request."
+"app.org.title}. Si vous ne souhaitez plus recevoir cet e-mail, veuillez "
+"contacter un administrateur afin qu'il puisse vous retirer de la liste des "
+"destinataires."
 
 msgid "The following reservations have been accepted:"
 msgstr "Les réservations suivantes ont été acceptées:"
@@ -1254,8 +1260,8 @@ msgstr "Cliquer sur le lien suivant pour définir un nouveau mot de passe:"
 
 msgid "If you don't want to change your password, you can ignore this email."
 msgstr ""
-"Si vous ne souhaitez pas changer de mot de passe, vous pouvez ignorer cet "
-"e-mail."
+"Si vous ne souhaitez pas changer de mot de passe, vous pouvez ignorer cet e-"
+"mail."
 
 msgid "Your request has received a payment."
 msgstr "Votre demande a reçu un paiement."
@@ -1264,8 +1270,8 @@ msgid "Your request was marked as unpaid."
 msgstr "Votre demande a été marquée comme non payée."
 
 msgid ""
-"Your request's payment has been refunded. Note that it might take a few days"
-" until your refunded amount is shown on your credit card bill."
+"Your request's payment has been refunded. Note that it might take a few days "
+"until your refunded amount is shown on your credit card bill."
 msgstr ""
 "Le paiement de votre demande a été remboursé. Notez qu'il peut se passer "
 "quelques jours avant que le montant du remboursement ne figure sur votre "
@@ -1296,8 +1302,8 @@ msgid "The following reservations have been rejected:"
 msgstr "Les réservations suivantes ont été rejetées :"
 
 msgid ""
-"This is a notification for the rejected reservations for ${organisation}. If"
-" you no longer wish to receive these notifications, please contact an "
+"This is a notification for the rejected reservations for ${organisation}. If "
+"you no longer wish to receive these notifications, please contact an "
 "administrator so they can remove you from the recipients list."
 msgstr ""
 "Il s'agit d'une notification concernant les réservations rejetées pour "
@@ -1511,8 +1517,8 @@ msgid "Back to usermanagement"
 msgstr "Retour à la gestion des utilisateurs"
 
 msgid ""
-"Sorry, the page you are looking for could not be found. Try checking the URL"
-" for errors or use the search box on the top."
+"Sorry, the page you are looking for could not be found. Try checking the URL "
+"for errors or use the search box on the top."
 msgstr ""
 "Désolé, la page que vous cherchez n'a pu être trouvée. Essayez de vérifier "
 "qu'il n'y a pas d'erreurs dans l'URL ou utilisez la fenêtre de recherche "
@@ -1611,8 +1617,8 @@ msgid ""
 "bottom of the newsletter. If you unsubscribe them here, they will not be "
 "notified."
 msgstr ""
-"Les abonnés peuvent toujours se désinscrire à travers un lien affiché au bas"
-" du bulletin d'information. Si vous vous désabonnez ici, ils ne seront pas "
+"Les abonnés peuvent toujours se désinscrire à travers un lien affiché au bas "
+"du bulletin d'information. Si vous vous désabonnez ici, ils ne seront pas "
 "informés. "
 
 msgid "Unsubscribe"
@@ -1622,8 +1628,7 @@ msgid "submitted"
 msgstr "soumis"
 
 msgid "No dates found, please select dates in the calendar first"
-msgstr ""
-"Aucune date trouvée, sélectionnez les dates dans le calendrier d'abord"
+msgstr "Aucune date trouvée, sélectionnez les dates dans le calendrier d'abord"
 
 msgid "Go to calendar"
 msgstr "Aller au calendrier"
@@ -1634,20 +1639,20 @@ msgid ""
 "applications."
 msgstr ""
 "Le lien suivant peut être utilisé pour souscrire aux réservations de ce "
-"calendrier. Il peut être utilisé par toute personne qui connaît le lien dans"
-" plusieurs applications de calendrier."
+"calendrier. Il peut être utilisé par toute personne qui connaît le lien dans "
+"plusieurs applications de calendrier."
 
 msgid ""
-"Note that we have no control over how often calendar applications update the"
-" calendars they are subscribed to (if they update at all). Therefore the "
+"Note that we have no control over how often calendar applications update the "
+"calendars they are subscribed to (if they update at all). Therefore the "
 "information shown in the calendar may be wrong or out of date. Use it at "
 "your own risk."
 msgstr ""
 "Notez que nous n'avons aucun contrôle sur la fréquence à laquelle les "
 "applications de calendrier mettent à jour les calendriers auxquels elles "
-"sont abonnées (si elles le font). Par conséquent, les informations affichées"
-" dans le calendrier peuvent être incorrectes ou obsolètes. Utilisez-le à vos"
-" risques et périls."
+"sont abonnées (si elles le font). Par conséquent, les informations affichées "
+"dans le calendrier peuvent être incorrectes ou obsolètes. Utilisez-le à vos "
+"risques et périls."
 
 msgid "Reservations must be made at least one day in advance."
 msgstr ""
@@ -1667,8 +1672,8 @@ msgstr ""
 
 msgid "Select a free time span in the calendar below to create an allocation."
 msgstr ""
-"Sélectionnez un intervalle de temps libre dans le calendrier ci-dessous pour"
-" créer une allocation."
+"Sélectionnez un intervalle de temps libre dans le calendrier ci-dessous pour "
+"créer une allocation."
 
 msgid "Removes all unreserved allocations between the start and end date."
 msgstr ""
@@ -1693,8 +1698,7 @@ msgstr ""
 "Reçoit des notifications pour les réservations du jour les jours suivants:"
 
 msgid "Receives notifications for internal notes on reservations."
-msgstr ""
-"Reçoit des notifications pour les notes internes sur les réservations."
+msgstr "Reçoit des notifications pour les notes internes sur les réservations."
 
 msgid "Receives notifications for rejected reservations."
 msgstr "Reçoit des notifications pour les réservations rejetées."
