--- a/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
@@ -1242,8 +1242,11 @@ msgstr "Dernières nouvelles"
 msgid "Show news as tiles"
 msgstr "Afficher les actualités sous forme de tuiles"
 
-msgid "If checked, the news will be shown as tiles"
-msgstr "Si cette case est cochée, les nouvelles seront affichées sous forme de tuiles."
+msgid "If checked, news are displayed as tiles. Otherwise, news are listed "
+"in full length."
+msgstr "Si cette case est activée, les nouvelles sont affichées sous forme de "
+"tuiles. Dans le cas contraire, les nouvelles sont listés dans leur "
+"intégralité."
 
 msgid ""
 "You are receiving this e-mail because you signed up for the ${org} "
