--- a/src/onegov/town6/locale/it_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/it_CH/LC_MESSAGES/onegov.town6.po
@@ -1229,8 +1229,10 @@ msgstr "Ultime notizie"
 msgid "Show news as tiles"
 msgstr "Mostra le notizie come piastrelle"
 
-msgid "If checked, the news will be shown as tiles"
-msgstr "Se è selezionata, le notizie saranno mostrate come piastrelle"
+msgid "If checked, news are displayed as tiles. Otherwise, news are listed "
+"in full length."
+msgstr "Se questa opzione è attivata, i notizie vengono visualizzati come "
+"tessere. Altrimenti, i notizie sono elencati per intero."
 
 msgid ""
 "You are receiving this e-mail because you signed up for the ${org} "
