--- a/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2024-03-26 15:28+0100\n"
+"POT-Creation-Date: 2024-04-02 09:42+0200\n"
 "PO-Revision-Date: 2022-03-15 10:52+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -1061,33 +1061,38 @@ msgid "(Redesign only)"
 msgstr "(Solo riprogettazione)"
 
 msgid ""
-"There are currently no allowed domains for iframes. To enable domains for "
-"iframes, please contact info@seantis.ch."
+"There are currently no allowed domains for iFrames. To enable domains for "
+"iFrames, please contact info@seantis.ch."
 msgstr ""
-"Attualmente non ci sono domini consentiti per gli iframe. Per abilitare i "
-"domini per gli iframe, contattare info@seantis.ch."
+"Attualmente non ci sono domini consentiti per gli iFrame. Per abilitare i "
+"domini per gli iFrame, contattare info@seantis.ch."
 
 msgid "Height"
 msgstr "Altezza"
 
 msgid ""
-"The height of the iframe in pixels. If not set, the iframe will have a "
+"The height of the iFrame in pixels. If not set, the iFrame will have a "
 "standard height of 800px."
 msgstr ""
-"L'altezza dell'iframe in pixel. Se non viene impostato, l'iframe avrà "
+"L'altezza dell'iFrame in pixel. Se non viene impostato, l'iframe avrà "
 "un'altezza standard di 800px."
 
 msgid "Display as card"
 msgstr "Visualizzazione come scheda"
 
-msgid "Display the iframe as a card with a border"
-msgstr "Visualizzare l'iframe come una scheda con un bordo"
+msgid "Display the iFrame as a card with a border"
+msgstr "Visualizzare l'iFrame come una scheda con un bordo"
 
-msgid "The following domains are allowed for iframes:"
-msgstr "I seguenti domini sono consentiti per gli iframe:"
+msgid "The following domains are allowed for iFrames:"
+msgstr "I seguenti domini sono consentiti per gli iFrame:"
 
-msgid "The domain of the URL is not allowed for iframes."
-msgstr "Il dominio dell'URL non è consentito per gli iframes."
+msgid "To allow more domains for iFrames, please contact info@seantis.ch."
+msgstr ""
+"Per consentire l'utilizzo di altri domini per iFrame, contattare "
+"info@seantis.ch."
+
+msgid "The domain of the URL is not allowed for iFrames."
+msgstr "Il dominio dell'URL non è consentito per gli iFrames."
 
 msgid "Destination"
 msgstr "Destinazione"
@@ -5671,6 +5676,20 @@ msgstr "È stato creato un account per te"
 
 msgid "The user was created successfully"
 msgstr "Utente creato correttamente"
+
+#~ msgid ""
+#~ "There are currently no allowed domains for iframes. To enable domains for "
+#~ "iframes, please contact info@seantis.ch."
+#~ msgstr ""
+#~ "Attualmente non ci sono domini consentiti per gli iframe. Per abilitare i "
+#~ "domini per gli iframe, contattare info@seantis.ch."
+
+#~ msgid ""
+#~ "The height of the iFrame in pixels. If not set, the iframe will have a "
+#~ "standard height of 800px."
+#~ msgstr ""
+#~ "L'altezza dell'iframe in pixel. Se non viene impostato, l'iframe avrà "
+#~ "un'altezza standard di 800px."
 
 #~ msgid "Chat with"
 #~ msgstr "Chat con"
